--- a/docs/生活记录/旅行/骑车去后海.md
+++ b/docs/生活记录/旅行/骑车去后海.md
@@ -47,3 +47,4 @@ import TabItem from '@theme/TabItem';
 
 回家的时候晚上了发现尾灯没电吓死爷了，还好一路有路灯和非机动车道，三亚的路真好啊，这要是在深圳感觉要被撞死在机动车道上  
 均速15还是非常拉胯，菜腿没话说
+![alt text](7874c926be3dbd5d542443272d5be80.jpg)
