--- a/docs/生活记录/日常分享/2025/跨年.md
+++ b/docs/生活记录/日常分享/2025/跨年.md
@@ -1,3 +1,7 @@
+---
+sidebar_position: 1
+---
+
 今年的跨年也在三亚，本来是想去亚特兰蒂斯旁边看b站的跨年晚会线下和无人机表演的，但是B站请了王力宏，小敏不想去  
 
 于是骑上电动车去体育馆想看看张杰演唱会外场有没有热闹可以蹭蹭，结果到了发现外场啥都没有，冷冷清清。  
