--- a/docs/生活记录/日常分享/2025/爬凤凰岭.md
+++ b/docs/生活记录/日常分享/2025/爬凤凰岭.md
@@ -31,7 +31,7 @@ sidebar_position: 1
   style={{width:'50%'}}
 />  
 
-爬了一个多小时到景区门口：  
+全程大概3公里，反正累死个人。爬了一个多小时到景区门口：  
 <span style={{color:'gray'}}>偷偷拍的照片</span> 
 <img
   src={require('./MVIMG_20250104_163713.jpg').default}
