--- a/docs/生活记录/日常分享/2025/过年.md
+++ b/docs/生活记录/日常分享/2025/过年.md
@@ -1,11 +1,17 @@
 ---
 sidebar_position: 4
 ---
-2024.1.24  
+2024.2.5 春节假期结束，正式上班。
+
 
 龙年已过，现在到来的是————蛇年！
 
 ## 过年回家
+往年的回家路线是 三亚 ———— 郑州 ———— 沈丘 ———— 家  
+今年到上海的机票真的太便宜了，于是从上海中转回家。  
+
+虽然便宜了，但是今年过年回家是真尼玛的难受。首先到上海是凌晨一点半。要在机场等到6点有地铁了再去高铁站。  
+这倒也还好，在机场椅子上睡觉也还行。
 
 ## 到家吃吃吃
 
