--- a/docs/技术分析/前端/后台管理系统架构分析.md
+++ b/docs/技术分析/前端/后台管理系统架构分析.md
@@ -318,6 +318,99 @@ ps: 这里有个之前不熟的小知识。在vue-router中,如这样：
 按钮权限使用自定义指令的方式实现。总之先复习一下自定义指令吧。  
 官方文档： https://cn.vuejs.org/guide/reusability/custom-directives#introduction  
 
+首先在权限控制的store（auth.ts）中，向后端请求按钮权限列表，然后存储在pinia中。  
+![alt text](image-2.png)  
+这里key是页面的name，value是拥有权限的按钮列表。  
+页面中，需要做权限鉴定的按钮都会加上v-auth指令，并传入按钮的key。  
+
+还要存储routeName页面名称，并且在前置路由守卫中维护。以便获取本页面的按钮权限列表。  
+这里可以看到，按钮权限是分页面管理的，而不是全局只有一个权限数组，这样比较灵活，当然维护起来比较麻烦。  
+如果需要一个份全局的权限，可以直接在store中维护一个全局权限数组，然后在自定义指令中判断是否在这个数组中。  
+
+
+接下来写一个自定义指令v-auth。  
+在自定义指令中，首先鉴定binding.value的值，如果是数组则判断是否全部在权限列表中。  
+这里`binding.value`就是`v-auth="'add'"`中传过来的值。  
+如果权限列表不包括这个按钮，则移除这个按钮。  
+```js
+ * v-auth
+ * 按钮权限指令
+ */
+import { useAuthStore } from "@/stores/modules/auth";
+import type { Directive, DirectiveBinding } from "vue";
+
+const auth: Directive = {
+  mounted(el: HTMLElement, binding: DirectiveBinding) {
+    const { value } = binding;
+    const authStore = useAuthStore();
+    // 获取当前页面的权限列表
+    const currentPageRoles = authStore.authButtonListGet[authStore.routeName] ?? [];
+    console.log(currentPageRoles);
+
+    // 如果没有权限，则直接移除这个按钮
+    // 如果是数组，则判断是否全部在权限列表中
+    if (value instanceof Array && value.length) {
+      const hasPermission = value.every(item => currentPageRoles.includes(item));
+      if (!hasPermission) el.remove();
+    } else {
+      if (!currentPageRoles.includes(value)) el.remove();
+    }
+  }
+};
+
+export default auth;
+```
+在directives/index.ts中作为插件统一导出，这样可以全局调用：  
+```js
+import { App, Directive } from "vue";
+import auth from "./modules/auth";
+import copy from "./modules/copy";
+import waterMarker from "./modules/waterMarker";
+import draggable from "./modules/draggable";
+import debounce from "./modules/debounce";
+import throttle from "./modules/throttle";
+import longpress from "./modules/longpress";
+
+const directivesList: { [key: string]: Directive } = {
+  auth,
+  copy,
+  waterMarker,
+  draggable,
+  debounce,
+  throttle,
+  longpress
+};
+
+const directives = {
+  install: function (app: App<Element>) {
+    Object.keys(directivesList).forEach(key => {
+      app.directive(key, directivesList[key]);
+    });
+  }
+};
+
+export default directives;
+```
+在main.ts中全局注册：  
+```js
+// custom directives
+import directives from "@/directives/index";
+
+app.use(ElementPlus).use(directives).use(router).use(I18n).use(pinia).mount("#app");
+```
+然后项目中就可以直接使用了。  
+在页面中使用自定义指令：  
+```js
+import vAuth from "@/directives/modules/auth";
+
+        <el-button v-auth="'add'" type="primary" :icon="CirclePlus" @click="openDrawer('新增')">新增用户</el-button>
+        <el-button v-auth="'batchAdd'" type="primary" :icon="Upload" plain @click="batchAdd">批量添加用户</el-button>
+        <el-button v-auth="'export'" type="primary" :icon="Download" plain @click="downloadFile">导出用户数据</el-button>
+        <el-button type="primary" plain @click="toDetail">To 子集详情页面</el-button>
+        <el-button type="danger" :icon="Delete" plain :disabled="!scope.isSelected" @click="batchDelete(scope.selectedListIds)">
+          批量删除用户
+        </el-button>
+```
 
 ## 布局
 这里的布局分四种： 
@@ -346,3 +439,4 @@ const layout = computed(() => globalStore.layout);
 ```
 
 布局使用`el-container,el-aside,el-main,el-header`等组件实现,还是比较简单的。这里就不展开了。  
+
