--- a/docs/技术分析/前端/运营数据管理系统前端开发记录.md
+++ b/docs/技术分析/前端/运营数据管理系统前端开发记录.md
@@ -176,6 +176,8 @@ while (hasMore) {
 await workbook.commit();
 ```
 
+思路就是吗，每次取 6W 条数据，然后新建 sheet，写入数据，然后继续下一页。最后结束写入流。
+
 这样虽然查询耗时没有变短，但是能正常的传输，切传输速度挺快的。
 
 其后请教了后端同事，用多线程分页查询应该会优化查询速度。还没有试这个方法，而且不知道 Node 有没有类似多线程的方式。
