--- a/docs/生活记录/日常分享/2025/买车.md
+++ b/docs/生活记录/日常分享/2025/买车.md
@@ -13,4 +13,18 @@
 中间因为销售的原因还有点不开心。第一次是销售从广东调车到了让我们去提车，但是公司的补贴流程还差两天没走完，被催的很不开心。第二次是付款的时候银行卡限额，也被搞得很不开心。
 
 总之车到手了！！
-TODO 此处应该有个车车的图片但是我没有拍 hhhhhhhh
+TODO 此处应该有个车车的图片但是我没有拍 hhhhhhhh  
+2025-5-14我终于给我的车拍了照片hhhhhhhhh
+<img
+src={require('./car.jpg').default}
+alt="车"
+style={{width:'50%'}}
+/>
+
+
+2025-5-9
+买车大概2个月了，然而还是懒得拍照片所以还没有补上上面的照片hhhhhhh  
+总结一下买车后的变化的话，大概就是想去哪里不用太考虑交通问题了，所以这两个月跑了很多地方，万宁、陵水、太阳湾浮潜、大东海跳水、小洲公园露营。之前一直因为交通不方便没去的地方这两个月都跑了一遍。  
+有车之后确实出门的意愿高了很多，尤其是拉小敏出门。不用吹风什么都好。  
+
+
