--- a/docs/技术分析/前端/芯位汉语学习项目开发记录.md
+++ b/docs/技术分析/前端/芯位汉语学习项目开发记录.md
@@ -19,7 +19,7 @@
 
 项目结构不算复杂，整体和后台管理差不多，页面布局使用了 el-main,el-aside 这些布局  
 页面内的样式反正我是用了不少 V0 直接生成样式，还挺好使的。  
-其他的架构基本上可以参照 `后台管理系统架构分析` 这篇文章。
+其他的架构基本上可以参照 [`后台管理系统架构分析`](/docs/技术分析/前端/后台管理系统架构分析) 这篇文章。
 
 ## 我负责的
 
